--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/style.css">
   <title>Select Example</title>
 </head>
 
@@ -21,7 +21,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="main.js"></script>
+  <script src="/static/main.js"></script>
 </body>
 
 </html>
