--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="/static/secrets.js"></script>
   <script src="/static/main.js"></script>
 </body>
 
